--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Assignmenthe</title>
+    <title>First Assignment</title>
+    <link rel="stylesheet" href="assignment.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <nav>
+            <h3 class="nav_Logo">LOGO</h3>
+            <button class="button_decoration">Sign Up</button>
+        </nav>
+        <div class="benner">
+            <div class="contain">
+                <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1></h1>
+            </div>
+            <button class="button_decoration" >Stay Focused</button>
+        </div>
 
     </header>
     <main>
