--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
 
     </header>
     <main>
-
+             <div class="contains">
+                <div class="contain">
+                    <h2>See It in Action</h2>
+                    <p class="contain_list">Explore the live preview and imagine your <br>brand in this bold new look</p>
+                    <button class="button_decoration">Lanunch Live Preview</button>
+                </div>
+                <img src="Assets/wc-mini.png" alt="Webflow Conf 2022" class="Webflow">
+             </div>
     </main>
     <footer>
         
