--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
-    <link rel="stylesheet" href="assignment.css">
+    <link rel="stylesheet" href="./assignment.css">
 </head>
 <body>
     <header class="header">
@@ -112,7 +112,7 @@
                <form action="">
                 <br>
 
-               <button class="button_decoration">Sign Up</button>
+               <button class="button_decoration">Get in Touch</button>
 </div>
            
             </form>
